--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 #!/usr/bin/env python3
 # -*- coding: utf-8 -*-
-"""
-Created on Tue Feb  4 19:56:57 2020
+language: python
+python:
+ - "3.5"
 
-@author: yukai
-"""
-
+# command to run tests
+script:
+ - python -m unittest TestTriangle
